feat: marketlens: prepare for deployment

--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <title>MarketLens - Stock Market Analysis & Portfolio Tracking</title>
+  <meta name="description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data and comprehensive financial metrics. Built with React, TypeScript, and Firebase." />
+  <meta name="keywords" content="stock market, portfolio tracker, financial analysis, stock prices, investment tracking, React portfolio project" />
+  <meta name="author" content="Yogesh Krishnani" />
+
+  <!-- Open Graph Meta Tags (for social sharing) -->
+  <meta property="og:title" content="MarketLens - Stock Market Analysis & Portfolio Tracking" />
+  <meta property="og:description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data and comprehensive financial metrics." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://market-lens-ae2a9.web.app" />
+  <meta property="og:site_name" content="MarketLens" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="MarketLens - Stock Market Analysis & Portfolio Tracking" />
+  <meta name="twitter:description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data." />
+
+  <!-- Theme and Branding -->
+  <meta name="theme-color" content="#1976d2" />
+  <meta name="msapplication-TileColor" content="#1976d2" />
+
+  <!-- Favicon (keep Vite's for now, can replace later) -->
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+  <!-- Preconnect to external domains for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://financialmodelingprep.com" />
+
+  <!-- Additional Meta Tags -->
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+
+  <!-- Structured Data for Portfolio Project -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "MarketLens",
+      "description": "Stock market analysis and portfolio tracking application",
+      "url": "https://market-lens-ae2a9.web.app",
+      "applicationCategory": "FinanceApplication",
+      "author": {
+        "@type": "Person",
+        "name": "Yogesh Krishnani"
+      },
+      "programmingLanguage": ["JavaScript", "TypeScript"],
+      "runtimePlatform": "Web Browser",
+      "operatingSystem": "Any"
+    }
+  </script>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
