feat: marketlens: prepare for deployment

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
   <meta name="theme-color" content="#1976d2" />
   <meta name="msapplication-TileColor" content="#1976d2" />
 
-  <!-- Favicon (keep Vite's for now, can replace later) -->
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!-- Preconnect to external domains for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
