--- a/index.html
+++ b/index.html
@@ -1,67 +1,67 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- SEO Meta Tags -->
-  <title>MarketLens - Stock Market Analysis & Portfolio Tracking</title>
-  <meta name="description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data and comprehensive financial metrics. Built with React, TypeScript, and Firebase." />
-  <meta name="keywords" content="stock market, portfolio tracker, financial analysis, stock prices, investment tracking, React portfolio project" />
-  <meta name="author" content="Yogesh Krishnani" />
+    <!-- SEO Meta Tags -->
+    <title>MarketLens - Stock Market Analysis & Portfolio Tracking</title>
+    <meta name="description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data and comprehensive financial metrics. Built with React, TypeScript, and Firebase." />
+    <meta name="keywords" content="stock market, portfolio tracker, financial analysis, stock prices, investment tracking, React portfolio project" />
+    <meta name="author" content="Yogesh Krishnani" />
 
-  <!-- Open Graph Meta Tags (for social sharing) -->
-  <meta property="og:title" content="MarketLens - Stock Market Analysis & Portfolio Tracking" />
-  <meta property="og:description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data and comprehensive financial metrics." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://market-lens-ae2a9.web.app" />
-  <meta property="og:site_name" content="MarketLens" />
+    <!-- Open Graph Meta Tags (for social sharing) -->
+    <meta property="og:title" content="MarketLens - Stock Market Analysis & Portfolio Tracking" />
+    <meta property="og:description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data and comprehensive financial metrics." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://market-lens-ae2a9.web.app" />
+    <meta property="og:site_name" content="MarketLens" />
 
-  <!-- Twitter Card Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="MarketLens - Stock Market Analysis & Portfolio Tracking" />
-  <meta name="twitter:description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data." />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="MarketLens - Stock Market Analysis & Portfolio Tracking" />
+    <meta name="twitter:description" content="Track stocks, analyze market trends, and manage your investment portfolio with real-time data." />
 
-  <!-- Theme and Branding -->
-  <meta name="theme-color" content="#1976d2" />
-  <meta name="msapplication-TileColor" content="#1976d2" />
+    <!-- Theme and Branding -->
+    <meta name="theme-color" content="#F05A28" />
+    <meta name="msapplication-TileColor" content="#F05A28" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="manifest" href="/site.webmanifest">
 
-  <!-- Preconnect to external domains for performance -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preconnect" href="https://financialmodelingprep.com" />
+    <!-- Preconnect to external domains for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://financialmodelingprep.com" />
 
-  <!-- Additional Meta Tags -->
-  <meta name="robots" content="index, follow" />
-  <meta name="googlebot" content="index, follow" />
+    <!-- Additional Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
 
-  <!-- Structured Data for Portfolio Project -->
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "MarketLens",
-      "description": "Stock market analysis and portfolio tracking application",
-      "url": "https://market-lens-ae2a9.web.app",
-      "applicationCategory": "FinanceApplication",
-      "author": {
-        "@type": "Person",
-        "name": "Yogesh Krishnani"
-      },
-      "programmingLanguage": ["JavaScript", "TypeScript"],
-      "runtimePlatform": "Web Browser",
-      "operatingSystem": "Any"
-    }
-  </script>
-</head>
-<body>
-<div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
-</body>
+    <!-- Structured Data for Portfolio Project -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Market Lens",
+        "description": "Stock market analysis and portfolio tracking application",
+        "url": "https://market-lens-ae2a9.web.app",
+        "applicationCategory": "FinanceApplication",
+        "author": {
+          "@type": "Person",
+          "name": "Yogesh Krishnani"
+        },
+        "programmingLanguage": ["JavaScript", "TypeScript"],
+        "runtimePlatform": "Web Browser",
+        "operatingSystem": "Any"
+      }
+    </script>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
